@@ -1,4 +1,4 @@
-.inline#inline{ hidden_if(session[:task_new].nil?) }
+.inline#inline{ hidden_if(collapsed) }
   - form_for(@task) do |f|
     = hidden_field_tag "task[user_id]", @current_user.id
     %table{ :align => :center, :cellpadding => 0, :cellspacing => 0 }
