@@ -1,11 +1,9 @@
-- content_for :styles do
-  %style
-    - Setting.task_category_color.each do |key, value|
-      == .#{key} { background:#{value}; }
+= render :partial => "styles"
 
-=inline "Create New Task", new_task_path, { :id => :inline, :collapsed => session[:tasks_new_pending].nil? }
+- collapsed = session[:tasks_new_pending].nil?
+=inline "Create New Task", url_for(:action => :new, :view => @view), { :id => :inline, :collapsed => collapsed }
 .title Tasks
-= render :partial => "create"
+= render :partial => "create", :locals => { :collapsed => collapsed }
 
 .log#log
   - unless @tasks.values.flatten.empty?
